--- a/Jessica/index.html
+++ b/Jessica/index.html
@@ -19,8 +19,8 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `Hai JESSICA AULIA MAHARANI SUTONO`;
+      musik = `musik.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
