--- a/Jessica/index.html
+++ b/Jessica/index.html
@@ -10,7 +10,7 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Special For You</title>
-    <script src="https://dekatutorial.github.io/flwr/s.js"></script>
+    <script src="https://Wira-Yudha.github.io/flwr/s.js"></script>
   </head>
   <body>
     <div class="open">
@@ -23,10 +23,10 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
       JESSICA AULIA MAHARANI SUTONO
       This is For You`;
       musik = `musik.mp3`;
-      nomorWhatsapp = ``;
-      idTelegram = ``;
+      ucapan = `KAMU TETAP YANG TERBAIK`;
+      ucapan = `KAMU HEBAT UDAH SAMPAI SAAT INI`;
 
-      DekaTutorial(ucapan, musik, nomorWhatsapp, idTelegram);
+      (ucapan, musik, nomorWhatsapp, idTelegram);
     </script>
   </body>
 </html>
