--- a/Jessica/index.html
+++ b/Jessica/index.html
@@ -20,11 +20,10 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
 
     <script>
       ucapan = `Hai
-      JESSICA AULIA MAHARANI SUTONO
-      This is For You`;
-      musik = `musik.mp3`;
-      ucapan = `KAMU TETAP YANG TERBAIK`;
-      ucapan = `KAMU HEBAT UDAH SAMPAI SAAT INI`;
+      JESSICA AULIA MAHARANI SUTONO`;
+    <script>
+      ucapan =`This is For You`;
+      
 
       (ucapan, musik, nomorWhatsapp, idTelegram);
     </script>
