--- a/Jessica/index.html
+++ b/Jessica/index.html
@@ -23,6 +23,8 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
       JESSICA AULIA MAHARANI SUTONO`;
     <script>
       ucapan =`This is For You`;
+    <script>
+      ucapan =`KAMU TUH HEBAT`;
       
 
       (ucapan, musik, nomorWhatsapp, idTelegram);
