--- a/Untukmu/index.html
+++ b/Untukmu/index.html
@@ -14,13 +14,18 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
   </head>
   <body>
     <div class="open">
-      <i>❤️</i>
+      <i>💖</i>
       <span>Klik love nya</span>
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `Hai Jessica Cacaa
+      Aku cuma mau bilang ke kamu
+      Tetap Semangatt yaa
+      Tetap Bersyukur apapun kondisinya
+      Kamu Hebat udah sampai saat ini
+      keep Strong buat kamuu`;
+      musik = `musik.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
