--- a/ToJessica/index.html
+++ b/ToJessica/index.html
@@ -14,13 +14,39 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
   </head>
   <body>
     <div class="open">
-      <i>❤️</i>
+      <i>❤‍🔥</i>
       <span>Klik love nya</span>
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `HALO,JESSICA AULIA MAHARANI SUTONO👋
+      THIS IS FOR YOU🥰
+      AKU MEMBUAT INI SUPAYA KAMU KUAT DAN PERCAYA DIRI DALAM MENGHADAPI KEADAAN. 
+      SEMOGA KAMU BISA MEMEHAMI APA YANG AKU SAMPAIKAN MELALUI WEB INI. 
+      CACA, TIDAK SEMUA ORANG BISA MENJADI ORANG YANG KUAT SEPERTI KAMU. 
+      AKU TAHU,BANYAK RASA SAKIT MENGAKAR MELEKAT. 
+      SEMOGA HAL ITU SEMUA DIGANTIKAN DENGAN HAL YANG LEBIH BAIK. 
+      INGAT YA, SETIAP ORANG ITU BISA BERMANFAAT DENGAN CARANYA MASING-MASING.
+      PERCAYA DIRILAH, KAMU LEBIH MAMPU DARIPADA YANG KAMU BAYANGKAN OKAYY. 
+      RASA SYUKUR TERHADAP DIRI SENDIRI BUKAN HANYA TENTANG MENGHARGAI PENCAPAIAN BESAR. 
+      MELAINKAN JUGA TENTANG MENEMUKAN KEBAHAGIAAN DALAM HIDUP. 
+      ORANG SE BERANI KAMU MASA MAU TAKUT APALAGI INSECURE. 
+      KAMU HEBAT, KAMU KUAT, KAMU BISA. 
+      JANGAN PERNAH MENYERAH DAN TETAP SEMANGAT YA. 
+      KAMU HARUS FOKUS PADA KELEBIHAN DAN PENCAPAIAN YANG AKAN MEMBANTU KAMU MEMPERKUAT KEYAKINAN DIRI DAN MENGURANGI KERAGUAN. 
+      INGAT, MENDORONG DIRI KAMU TERLALU KERAS TANPA HENTI HANYA AKAN MENYEBABKAN KELELAHAN BATIN. 
+      CINTA SEJATI DIMULAI DENGAN MENERIMA DIRI KITA APA ADANYA, DENGAN SEMUA KELEBIHAN DAN KEKURANGANNYA. 
+      TETAP SEMANGATT YAA, HARUS BISA. 
+      JANGAN PERNAH MENYERAH, KAMU HARUS BISA. 
+      TIDAK ADA YANG TIDAK MUNGKIN DI DUNIA INI SELAGI KITA BERUSAHA. 
+      JANGAN BANYAK MIKIR YAA, HARUS TENANG. 
+      AKU DISINI SELALU NGE DUKUNG DAN MENDOAKAN. 
+      APAPUN ITU PASTI YG TERBAIK🤩
+      SEMOGA APA YANG KAMU INGIN GAPAI BISA TERCAPAI, AAMIIN. 
+      TETAP SEMANGATT CACAAA
+      SEE YOU YAA❤
+      DADAHHHH😘👋`;
+      musik = `musik.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
