--- a/ToJessica/index.html
+++ b/ToJessica/index.html
@@ -22,7 +22,7 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
       ucapan = `HALO,JESSICA AULIA MAHARANI SUTONO👋
       THIS IS FOR YOU🥰
       AKU MEMBUAT INI SUPAYA KAMU KUAT DAN PERCAYA DIRI DALAM MENGHADAPI KEADAAN. 
-      SEMOGA KAMU BISA MEMEHAMI APA YANG AKU SAMPAIKAN MELALUI WEB INI. 
+      SEMOGA KAMU BISA MEMAHAMI APA YANG AKU SAMPAIKAN MELALUI WEB INI. 
       CACA, TIDAK SEMUA ORANG BISA MENJADI ORANG YANG KUAT SEPERTI KAMU. 
       AKU TAHU,BANYAK RASA SAKIT MENGAKAR MELEKAT. 
       SEMOGA HAL ITU SEMUA DIGANTIKAN DENGAN HAL YANG LEBIH BAIK. 
@@ -42,10 +42,19 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
       JANGAN BANYAK MIKIR YAA, HARUS TENANG. 
       AKU DISINI SELALU NGE DUKUNG DAN MENDOAKAN. 
       APAPUN ITU PASTI YG TERBAIK🤩
-      SEMOGA APA YANG KAMU INGIN GAPAI BISA TERCAPAI, AAMIIN. 
+      SEMOGA APA YANG KAMU INGIN GAPAI BISA TERCAPAI, AAMIIN.
+      KAMU BISA MELAKUKAN SAMPAI SEJAUH INI PUN SUDAH LUAR BIASA. 
+      KEEP STRONG AND BRAVE CACAA☺
+      CERIA SELALU YAA🤡
+      SEMUA PASTI BISA DI LALUI DENGAN MUDAH ASAL KITA YAKIN DAN OPTIMIS. 
+      AKU YAKIN KALO KAMU PASTI BISAA👊✊
       TETAP SEMANGATT CACAAA
       SEE YOU YAA❤
-      DADAHHHH😘👋`;
+      DADAHHHH😘👋
+      😍🥰😘
+      ❤❤‍🔥❤
+      💞
+      🌹`;
       musik = `musik.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
